Closed Bug 1731052 Opened 4 years ago Closed 4 years ago

Scrollbars no longer have contrast on many sites with privacy.resistFingerprinting enabled.

Categories

(Core :: Widget: Gtk, defect)

Firefox 94
defect

Tracking

()

VERIFIED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 --- verified

People

(Reporter: ke5trel, Assigned: emilio)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

STR:

  1. Set privacy.resistFingerprinting = true on Ubuntu 21.04.
  2. Visit https://duckduckgo.com (light theme).

The scrollbar thumb is all white with no contrast against the background. When the site uses dark theme the scrollbar thumb is visible.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=8c9e9d61fc322fad479d14e993990102ecaedae8&tochange=13b542ebd7390ed8dc9029ecb80fad41a3262b31

Regressed by Bug 1730603.

Assignee: nobody → emilio
Flags: needinfo?(emilio)

We need to use standins for CSS-accesible colors in high contrast mode
(when appropriate) so that the CSS color matches the one in forms.css.

But this is not needed for e.g. scrollbar colors, which are not
CSS-accessible. So shuffle around the checks so that we account for
that as we should.

Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6f52184495c0 Consider whether the color is CSS accessible to decide whether to use standins in nsNativeBasicTheme. r=mstange
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch

I've reproduced this issue on an affected Nighty build (2021-09-16), on Win 11.

The issue is verified as fixed across platforms: Win 11, macOS 11 and Ubuntu 18.04 x64.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: